# circt-synth-tracker

./: .gitignore  .gitmodules  README.md  history.json  pass-history.json  pass-timeseries.html  pyproject.toml  report-pass.html  report.html  run.sh  timeseries.html
.github/actions/build-circt-at-sha/: action.yml
.github/actions/run-benchmark/: action.yml
.github/actions/setup-tracker/: action.yml
.github/actions/setup-ubuntu-ci-tools/: action.yml
.github/scripts/: install-bitwuzla.sh
.github/workflows/: ci-aig-benchmark.yml  ci-circt-pr-watcher.yml  ci-experiment.yml  ci-nightly.yml  ci-pr-benchmark.yml  ci-pr-bot.yml  ci-pr-pass-benchmark.yml  lint.yml
benchmarks/: lit.cfg.py
benchmarks/aig/lsils/: generate_tests.py  lit.cfg.py
benchmarks/aig/lsils/tests/: adder.test  arbiter.test  bar.test  cavlc.test  ctrl.test  dec.test  div.test  hyp.test  i2c.test  int2float.test  log2.test  max.test  mem_ctrl.test  multiplier.test  priority.test  router.test  sin.test  sqrt.test  square.test  voter.test
benchmarks/comb/: README.md
benchmarks/comb/DatapathBench/: README.md  lit.cfg.py
benchmarks/comb/DatapathBench/tests/: AddMop.test  AddMulSgn.test  AddMulUns.test  AddThree.test  AddThreeSgn.test  AlphaBlend.test  CarrySaveCompare.test  CarrySaveSelect.test  DotProduct.test  DotProductSgn.test  Fma.test  FmaSgn.test  FmaShare.test  FmaShareSgn.test  Fmaa.test  FmaaSgn.test  MulAddSgn.test  MulAddUns.test  MulThree.test  MulThreeSgn.test  SqrSgn.test  SqrUns.test  add_three.test  blend.test  dot_product.test  fma.test  fma_share.test  fmaa.test
benchmarks/comb/ELAU/: README.md  generate_tests.py  lit.cfg.py
benchmarks/comb/ELAU/tests/: AbsVal.test  Add.test  AddC.test  AddCfast.test  AddCsv.test  AddMod2Nm1.test  AddMod2Nm1s0.test  AddMop.test  AddMulUns.test  AddSub.test  AddSubC.test  AddSubV.test  AddV.test  AllOneDet.test  AllZeroDet.test  Bin2Gray.test  CmpEQ.test  CmpEQGE.test  CmpGE.test  Cnt.test  Dec.test  DecC.test  Decode.test  FullAdder.test  Gray2Bin.test  Inc.test  IncC.test  IncDec.test  IncDecC.test  LeadOneDet.test  LeadSignDet.test  LeadZeroDet.test  Log2.test  MulAddSgn.test  MulAddUns.test  MulSgn.test  MulUns.test  Neg.test  NegC.test  RedAnd.test  (+8 more)
benchmarks/comb/microbenchmarks/: add.sv  alu.sv  barrel_shifter.sv  comparator.sv  icmp.sv  lit.cfg.py  mul.sv  mux.sv  parity.sv  sub.sv
benchmarks/pass/: README.md  all_pass_bench.test  commands.json  lit.cfg.py
benchmarks/pass/tests/: arithmetic_adder.test  arithmetic_bar.test  arithmetic_div.test  arithmetic_hyp.test  arithmetic_log2.test  arithmetic_max.test  arithmetic_multiplier.test  arithmetic_sin.test  arithmetic_sqrt.test  arithmetic_square.test  random_control_arbiter.test  random_control_cavlc.test  random_control_ctrl.test  random_control_dec.test  random_control_i2c.test  random_control_int2float.test  random_control_mem_ctrl.test  random_control_priority.test  random_control_router.test  random_control_voter.test
pass-benchmarks/: commands.json
pass-benchmarks/main/: report-pass.html
pr-benchmarks/pr-10120/: report.html
pr-benchmarks/pr-10121/: report.html
pr-benchmarks/pr-10137/: report.html
pr-benchmarks/pr-10193/: report-pass.html  report.html
pr-benchmarks/pr-10198/: report.html
pr-benchmarks/pr-10211/: report.html
pr-benchmarks/pr-10212/: report.html
pr-benchmarks/pr-10333/: report-pass.html  report.html
pr-benchmarks/pr-9744/: report.html
pr-benchmarks/pr-9850/: report.html
pr-benchmarks/pr-9949/: report.html
src/circt_synth_tracker/: README.md  __init__.py  tool_registry.py
src/circt_synth_tracker/analysis/: __init__.py  aggregate_results.py  append_history.py  append_pass_history.py  check_cec.py  compare_results.py  pass_benchmark_report.py  pass_compare_results.py  pass_pr_compare_report.py  pass_timeseries_report.py  report_formatting.py  timeseries_report.py
src/circt_synth_tracker/tools/: __init__.py  abc.py  abc_opt.py  circt_synth.py  pass_benchmark.py  yosys.py
src/circt_synth_tracker/utils/: __init__.py  aig_judge.py  build_failure_report.py  pr_comment_parser.py  submit.py
src/circt_synth_tracker/utils/judge/: CMakeLists.txt  README.md  __init__.py  build_judge.py  embed_genlib.cmake
src/circt_synth_tracker/utils/judge/patches/: pr683-fix-emap.patch
src/circt_synth_tracker/utils/judge/src/: main.cpp
tests/: test_build_failure_report.py  test_pass_reporting.py  test_pr_comment_parser.py
