[project]
name = "circt-synth-tracker"
version = "0.1.0"
description = "A test suite for CIRCT synthesis using LLVM-lit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lit>=18.0.0", "tabulate>=0.9.0"]

[project.scripts]
# Synthesis tool wrappers
run-circt-synth = "circt_synth_tracker.tools.circt_synth:main"
run-yosys = "circt_synth_tracker.tools.yosys:main"
run-abc-opt = "circt_synth_tracker.tools.abc_opt:main"

# Utility tools
mockturtle-aig-judge = "circt_synth_tracker.utils.aig_judge:main"
abc-aig-judge = "circt_synth_tracker.tools.abc:main"
submit-results = "circt_synth_tracker.utils.submit:main"
build-judge = "circt_synth_tracker.utils.judge.build_judge:main"
prepare = "circt_synth_tracker.utils.judge.build_judge:main"

# Analysis tools
aggregate-results = "circt_synth_tracker.analysis.aggregate_results:main"
compare-results = "circt_synth_tracker.analysis.compare_results:main"
append-history = "circt_synth_tracker.analysis.append_history:main"
timeseries-report = "circt_synth_tracker.analysis.timeseries_report:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circt_synth_tracker"]

[tool.ruff]
exclude = ["benchmarks/", "tests/"]

[dependency-groups]
dev = ["lit>=18.0.0", "ruff>=0.14.1"]
